syntax = "proto3";

import "StopServerInfo.proto";

option java_package = "org.sorapointa.proto";

message GetPlayerTokenRsp {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 130;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  bytes security_cmd_buffer = 6;
  uint32 gm_uid = 7;
  bool is_guest = 11;
  bool is_watchdog_uid = 126;
  uint32 key_id = 134;
  string sign = 1666;
  string secret_key = 15;
  uint32 account_type = 8;
  uint32 channel_id = 676;
  bytes extra_bin_data = 5;
  uint64 secret_key_seed = 3;
  string token = 13;
  string server_rand_key = 1188;
  uint32 minors_reg_min_age = 1670;
  string birthday = 1847;
  uint32 tag = 1099;
  string client_ip_str = 1382;
  uint32 sub_channel_id = 1038;
  int32 retcode = 2;
  string client_version_random_key = 1152;
  string psn_id = 242;
  bool is_proficient_player = 9;
  uint32 platform_type = 10;
  uint32 reg_platform = 646;
  StopServerInfo stop_server = 1897;
  uint32 black_uid_end_time = 12;
  bool is_login_white_list = 746;
  string account_uid = 1;
  repeated uint32 finish_collection_id_list = 1766;
  string msg = 4;
  string country_code = 245;
  uint32 uid = 14;
}
